fixed spacing issues

--- a/src/components/testimonials/hero.css
+++ b/src/components/testimonials/hero.css
@@ -18,7 +18,7 @@
 }
 
 .img-fix{
-    margin-top: -150px;
+    margin-top: -20px;
 }
 
 @media(min-width:768px){
